<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    android:background="@drawable/bottom_sheet"
    android:paddingStart="8dp"
    android:paddingTop="16dp"
    android:paddingEnd="8dp"
    android:paddingBottom="4dp"
    android:theme="@style/Theme.MaterialComponents.BottomSheetDialog">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/biometric_prompt_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        app:layout_constraintBottom_toTopOf="@id/subtitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread_inside" />

    <TextView
        android:id="@+id/subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/biometric_prompt_sub_title"
        android:textAppearance="@style/TextAppearance.AppCompat.SearchResult.Subtitle"
        app:layout_constraintBottom_toTopOf="@+id/description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title"
        tools:text="Sub Title" />

    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="32dp"
        android:text="@string/biometric_prompt_description"
        app:layout_constraintBottom_toTopOf="@+id/state_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/subtitle"
        tools:text="this is a description" />

    <ImageView
        android:id="@+id/state_icon"
        android:layout_width="@dimen/fingerprint_icon_size"
        android:layout_height="@dimen/fingerprint_icon_size"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="32dp"
        android:scaleType="fitXY"
        android:src="@drawable/fingerprint"
        android:tint="@color/fingerprint_start"
        app:layout_constraintBottom_toTopOf="@id/biometric_positive_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/description"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/help_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@id/biometric_positive_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/state_icon"
        tools:text="Touch sensor to Authenticate"
        tools:visibility="visible" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/biometric_negative_button"
        style="@style/Button.Negative"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/biometric_prompt_negative_button_text"
        app:layout_constraintBottom_toBottomOf="@id/biometric_positive_button"
        app:layout_constraintEnd_toStartOf="@id/biometric_positive_button"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/biometric_positive_button" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/biometric_positive_button"
        style="@style/Button.Positive"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:enabled="false"
        android:text="@string/biometric_prompt_positive_button_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/biometric_negative_button"
        app:layout_constraintTop_toBottomOf="@id/help_message" />
</androidx.constraintlayout.widget.ConstraintLayout>
